refactor(blog): compatible with vuepress v2.0.0-beta.45
closed #11

--- a/.x-cmd/install
+++ b/.x-cmd/install
@@ -26,28 +26,24 @@ use_npm_verison() {
 }
 
 install_all() {
-	rm -rf "$WORK_DIR/node_modules" "$WORK_DIR/yarn.lock"
-	use_npm_verison && yarn install && x build clean && x build plugin && rm_react_type
-}
-
-install_plugin() {
-	shift; use_npm_verison && yarn add -D -W "$@"
+	rm -rf "$WORK_DIR/node_modules" "$WORK_DIR/pnpm-lock.yaml"
+	use_npm_verison && pnpm install && x ws build plugin
 }
 
 install_update() {
 	local ___X_CMD_UI_FORM_EXIT_STRATEGY="execute|exit"
     ___x_cmd_ui_form "Are you sure you want to delete $(___x_cmd_ui bold "node_modules")" tf 1 = "yes" "no"
 	if [ "$tf" != "yes" ];then
-		use_npm_verison && yarn install && x build plugin && rm_react_type
+		use_npm_verison && pnpm install && x ws build plugin && rm_react_type
 	else
 		rm -rf "$WORK_DIR/node_modules"
-		use_npm_verison && yarn install && x build clean && x build plugin && rm_react_type
+		use_npm_verison && pnpm install && x ws build plugin && rm_react_type
 	fi
 }
 
 install_none() {
 	[ ! -d "$WORK_DIR/node_modules" ] && \
-		 use_npm_verison && yarn install && x build clean &&  x build plugin && rm_react_type
+		 use_npm_verison && pnpm install && x ws build plugin && rm_react_type
 	return 0
 }
 
